<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Bruno Parmentier. This file is part of DNSSetter.
  ~
  ~ DNSSetter is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ DNSSetter is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with DNSSetter.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">DNSSetter</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_source_code">Source code</string>
    <string name="pref_title_developers_website">Developer\'s website</string>
    <string name="pref_title_donate_bitcoin">Donate Bitcoin</string>
    <string name="pref_title_license">License</string>
    <string name="pref_title_license_message" translatable="false">
        DNSSetter
        \nCopyright &#169; 2014 Bruno Parmentier\n

        \nThis program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n

        \nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n

        \nYou should have received a copy of the GNU General Public License
        along with this program.  If not, see &lt;https://www.gnu.org/licenses/&gt;.\n
    </string>

    <string name="firstrun_dialog_message">
        DNSSetter lets you change your DNS servers. This is temporary and it will not resist if your
        IP address changes or if you restart your operating system.\n
        \nThe app is currently using the \"setprop\" method. This might not work for you. If so,
        please let me know so I can try adding other methods.\n
        \nWarning! Your operating system must be rooted!
    </string>
    <string name="firstrun_dialog_ok">OK</string>

</resources>
